Styles - Prevent word wrap inside buttons in settings menu

--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,9 @@
     font-weight: bold;
     color: var(--SmartThemeQuoteColor);
 }
+
+/* General Use Styles */
+
+.w-auto {
+    width: auto;
+}
